// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly with game 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #EEE;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
}

.c1 {
  font-size: 20px;
}

.c2 {
  font-size: 18px;
  border: solid black 1px;
  background-color: #AAA;
  cursor: pointer;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c4 {
  font-size: 20px;
}

.c5 {
  font-size: 20px;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Project Rally Point
    </div>
    <a
      href="/api/auth/login"
    >
      <img
        alt="Login"
        src="/img/steam_login.png"
      />
    </a>
  </div>
  <div>
    <div>
      QUEUE
    </div>
    <div>
      Players: 
      0
       / 
      48
    </div>
    <button
      className="c2"
      onClick={[Function]}
    >
      Join Game
    </button>
  </div>
  <div
    className="c3"
  >
    <div>
      <div
        className="c4"
      >
        Team 
        1
         (
        0
         players)
      </div>
      <div>
        <div
          className="c5"
        >
          Squad 
          1
           (
          0
           players)
        </div>
      </div>
      <div>
        <div
          className="c5"
        >
          Squad 
          2
           (
          0
           players)
        </div>
      </div>
      <div>
        <div
          className="c5"
        >
          Squad 
          3
           (
          0
           players)
        </div>
      </div>
    </div>
    <div>
      <div
        className="c4"
      >
        Team 
        2
         (
        0
         players)
      </div>
      <div>
        <div
          className="c5"
        >
          Squad 
          1
           (
          0
           players)
        </div>
      </div>
      <div>
        <div
          className="c5"
        >
          Squad 
          2
           (
          0
           players)
        </div>
      </div>
      <div>
        <div
          className="c5"
        >
          Squad 
          3
           (
          0
           players)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App renders initial state correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #EEE;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px;
}

.c1 {
  font-size: 20px;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Project Rally Point
    </div>
    <a
      href="/api/auth/login"
    >
      <img
        alt="Login"
        src="/img/steam_login.png"
      />
    </a>
  </div>
</div>
`;
